# termcas

./: CMakeLists.txt  README.md  craps.c  dice.c  dice.h  games.h  main.c
